[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdx-steroids"
dynamic = ["version"]
description = "Small collection of Python Markdown extensions"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [{name = "Adam Twardoch", email = "adam+github@twardoch.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["markdown", "extension", "plugin", "python-markdown"]
requires-python = ">=3.8"
dependencies = [
    "markdown>=3.5.0",
    "mako>=1.0.7",
    "pymdown-extensions>=9.0",
    "cssselect>=1.0.1",
    "lxml>=3.8.0",
    "beautifulsoup4>=4.6.0",
]

[project.urls]
Homepage = "https://github.com/twardoch/markdown-steroids"
Documentation = "https://twardoch.github.io/markdown-steroids"
Repository = "https://github.com/twardoch/markdown-steroids"
Issues = "https://github.com/twardoch/markdown-steroids/issues"

[tool.setuptools.dynamic]
version = {attr = "mdx_steroids.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["mdx_steroids*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
   \.eggs
 | \.git
 | \.hg
 | \.mypy_cache
 | \.tox
 | \.venv
 | _build
 | buck-out
 | build
 | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["mdx_steroids"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
